...
        case controls, metrics, nowPlaying
    }

    var body: some View {
        TabView(selection: $selection) {
            ControlsView().tag(Tab.controls)
            MetricsView().tag(Tab.metrics)

            // MARK: NowPlayingView is provided by WatchKit

            #if os(watchOS)
                NowPlayingView().tag(Tab.nowPlaying)
            #endif
...
